# prototyp-na-patek

./: .env-example  .gitignore  ASYNC_CONVERSION_SUMMARY.md  CHAT_HISTORY_README.md  DOCUMENT_FORMATS.md  Dokumentace - Chatbot.docx  README.md  RERANKING_README.md  SYSTEMOVA_DOKUMENTACE.md  dev.bat  package-lock.json  package.json  ~$kumentace.docx
backend/: enhanced_chat_test.html  pyproject.toml  rag_test.html  setup_chat_history.py  test_async.py  test_async_operations.py  test_document_loader.py  test_sample.txt  test_upload.html  test_upload_api.py  upload_function_backup.py
backend/src/agent/: app.py  chat_history_api.py  chat_history_service.py  configuration.py  database.py  document_loader.py  embeddings.py  graph.py  models.py  pdfloader.py  pinecone_connector.py  prompts.py  rag.py  reranker.py  state.py  text_splitter.py  utils.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  EnhancedApp.tsx  global.css
frontend/src/components/: ActivityTimeline.tsx  ChatMessagesView.tsx  ConversationList.tsx  InputForm.tsx  UploadFile.tsx  WelcomeScreen.tsx
frontend/src/hooks/: useChatHistory.ts
